lab/kubernetes/rollback-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minecraft
  namespace: bluemap-sophisticated-staging
spec:
  replicas: 0
  template:
    metadata:
      annotations:
        bluemap.guenter.cloud/addon-sha256: null
        bluemap.guenter.cloud/glassential-mode: null
    spec:
      containers:
        - name: minecraft
